@@ -1,3 +1,9 @@
+Tue Feb  3 14:04:47 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (glob_helper): obtain real name with FindFirstFile API
+	  instead of matchin all entries, on Windows.
+	  [ruby-core:67954] [Bug #10819]
+
 Tue Feb  3 12:26:35 2015  Katsuhiko Nishimra  <ktns.87@gmail.com>
 
 	* lib/mkmf.rb (configuration): set the default cxxflags, which is
